day-2/examples-2/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    run: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        requests:
          cpu: "200m"
          memory: "254Mi"
          ephemeral-storage: "1Gi"
        limits:
          cpu: "400m"
          memory: "512Mi"
          ephemeral-storage: "2Gi"
