day-2/examples-2/svc-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meu-servico
spec:
  type: ClusterIP
  selector:
    run: nginx
  ports:
  - port: 8080
    targetPort: 80
