day-2/examples-2/e-ipblock-pod-a.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: multi-port
spec:
  podSelector:
    matchLabels:
      role: pod-a
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 32000
      endPort: 32768
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
